--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/easylogic/codemirror-colorpicker.git"
+    "url": "https://github.com/easylogic/color.git"
   },
   "author": "",
   "license": "MIT",
